--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -1,18 +1,15 @@
-.signup-box {
-    width: 100%;
-    max-width: 400px;
+/* .signup-box {
+    width: 400px;
     padding: 20px;
-    background:#f5f5f5;
-
+    background: #1f293a;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     text-align: center;
-    margin: 0 auto;
 }
 
 .signup-box h2 {
     font-size: 2em;
-    color: black;
+    color: #0ef;
     margin-bottom: 20px;
 }
 
@@ -23,17 +20,45 @@
 .custom-label {
     display: block;
     text-align: left;
-    color: black;
+    color: #fff;
 }
 
 body {
-    background-color:#f8f8ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+    background-color: #1f293a;
+} */
 
 
- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Signup.css */
+
+/* Add custom styles if needed */
+/* 
