--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -1,64 +1,52 @@
-/* .signup-box {
-    width: 400px;
-    padding: 20px;
-    background: #1f293a;
+.signup-container {
+    width: 300px;
+    background-color: #f9f9f9;
+    padding: 61px;
+    border: 1px solid #ccc;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    text-align: center;
-}
-
-.signup-box h2 {
-    font-size: 2em;
-    color: #0ef;
-    margin-bottom: 20px;
-}
-
-.alert {
-    margin-bottom: 20px;
-}
-
-.custom-label {
-    display: block;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  label {
+    margin-bottom: 10px;
     text-align: left;
-    color: #fff;
+    display: block;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    width: 269px;
+    height: 19px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
-
-body {
-    background-color: #1f293a;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Signup.css */
-
-/* Add custom styles if needed */
-/* 
+  
+  button[type="submit"] {
+    width: 250px; 
+    height: 40px;
+    background-color: blue;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: blue;
+  }
+  
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
