--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,51 +1,58 @@
-.login-container {
-    width: 300px;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border: 1px solid #ccc;
+.form-container {
+    background-color: #fff;
+    padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-label {
-    margin-bottom: 10px;
-    text-align: left;
-    display: block;
-}
-
-input[type="text"],
-input[type="password"] {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
     width: 100%;
-    height: 30px;
+    text-align: center;
+}
+
+.form-container h2 {
     margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    color: #333;
 }
 
-button[type="submit"] {
-    width: 100%;
-    height: 40px;
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
-.error {
-    color: red;
+.form-container label {
+    display: block;
+    text-align: left;
     font-size: 14px;
     margin-bottom: 10px;
+    color: #333;
+}
+
+.form-container input[type="email"],
+.form-container input[type="password"] {
+    width: calc(100% - 22px);
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.form-container button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.form-container button[type="submit"]:hover {
+    background-color: darkblue;
+}
+
+@media (max-width: 600px) {
+    .form-container {
+        padding: 20px;
+    }
+}
+body{
+    background-color: #eeeee4;
 }
